почти добил индекс

--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
           <img src="img/logo-tablet.svg" alt="logo header-tablet site" class="page-header__logo-site-image-tablet"
             width="187" height="58">
           <img src="img/logo-desktop.svg" alt="logo header-desktop site" class="page-header__logo-site-image-desktop"
-            width="173" height="58">
+            width="202" height="61">
         </a>
         <a href="index.html" class="page-header__logo-mobile-page">
           <img src="img/logo-mobile-header.png" class="page-header__logo-page-image" alt="" width="101" height="18">
@@ -30,21 +30,25 @@
       <nav class="menu-main">
         <ul class="menu-main__sub">
           <li class="menu-main__sub-menu-elem"><a href="index.html"
-              class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-active">Главная</a>
+              class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-index menu-main__sub-menu-elem-link-active">Главная</a>
           </li>
-          <li class="menu-main__sub-menu-elem "><a href="catalog.html" class="menu-main__sub-menu-elem-link ">Каталог
+          <li class="menu-main__sub-menu-elem "><a href="catalog.html" class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-index">Каталог
               продукции</a></li>
-          <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
+          <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-index">Подбор
               программы</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <div class="header-background">
-    <h1 class="header-background__main-words">Функциональное питание для котов</h1>
+
+     <div class="header-background__headers">
+     <h1 class="header-background__main-words">Функциональное питание для котов</h1>
     <h2 class="header-background__work-for-your-cat">Занялся собой? Займись котом!</h2>
+     </div>
     <img src="img/index-can-mobile.png" alt="index-can-mobile" class="header-background__mobile-img">
     <img src="img/index-can-tablet.png" alt="index-can-tablet" class="header-background__tablet-img">
+    <img src="img/index-can-desktop.png" alt="index-can-desktop" class="header-background__desktop-img" >
     <a href="" class="check-your-program"> Подобрать программу</a>
   </div>
   </header>
@@ -53,126 +57,141 @@
     <section class="programs">
       <div class="programs__program">
         <div class="programs__header-program">
-          <span class="programs__img_program"><img src="img/stand_cat.png" alt=""
-              class="programs__img_program-img"></span>
-          <h3 class="programs__name">Похудение</h3>
+          <span class="programs__img_program programs__img_program-standing-cat"><img src="img/icon-cat-slim.svg" alt="icon-cat-slim"
+              class="programs__img_program-img icon-cat-slim"></span>
+          <h3 class="programs__name programs__name-low-weight">Похудение</h3>
         </div>
-        <span class="programs__program-content">
+        <span class="programs__program-content programs__program-content-your-cat-weights">
           Ваш кот весит больше собаки и
           почти утратил способность лазить по деревьям? Пора на диету!
           Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
         </span>
-        <div class="programs__program-main-content-link">
-          <a href="catalog_slim.html" class="programs__program-link">Каталог Slim</a>
-          <img src="img/right-arrow-long.png" alt="right arrow">
+        <div class="programs__program-main-content-link programs__program-link-catalog-slim">
+          <a href="catalog_slim.html" class="programs__program-link ">Каталог Slim</a>
+          <img src="img/icon-right-arrow-long.svg" alt="right arrow" class="icon-right-arrow-verylong">
         </div>
       </div>
       <div class="programs__program programs__program-puma">
         <div class="programs__header-program programs__header-program-puma">
-          <span class="programs__img_program "><img src="img/walking-cat.png" alt=""
+          <span class="programs__img_program "><img src="img/icon-cat-pro.svg" alt=""
               class="programs__img_program-img programs__img-running-puma"></span>
-          <h3 class="programs__name">Набор массы</h3>
+          <h3 class="programs__name programs__name-more-weight">Набор массы</h3>
         </div>
-        <span class="programs__program-content ">
+        <span class="programs__program-content programs__program-content-last-child">
           Заработать авторитет среди дворовых котов и даже собак?
           Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
         </span>
-        <div class="programs__program-main-content-link">
-          <a href="catalog_pro.html" class="programs__program-link">Каталог Pro</a>
-          <img src="img/right-arrow-long.png" alt="right arrow">
+        <div class="programs__program-main-content-link programs__program-link-catalog-pro">
+          <a href="catalog_pro.html" class="programs__program-link ">Каталог Pro</a>
+          <img src="img/icon-right-arrow-long.svg" alt="right arrow" class="icon-right-arrow-verylong">
         </div>
       </div>
     </section>
     <section class="how-it-is-work">
       <h2 class="how-it-is-work__header">Как это работает</h2>
-      <div class="how-it-is-work__sub">
+<div class="how-it-is-work__sub-two-items-main">
+      <div class="how-it-is-work__sub-two-items">
+      <div class="how-it-is-work__sub how-it-is-work__sub-first-child">
         <span class="how-it-is-work__green advantage-1">
           <img src="img/advantage-1.png" alt="advantage1" class="how-it-is-work__sub-img-advantage" width="26"
             height="29">
         </span>
-        <span class="how-it-is-work__sub-text">Функциональное питание содержит только полезные питательные
+        <span class="how-it-is-work__sub-text how-it-is-work__sub-text-first-child">Функциональное питание содержит только полезные питательные
           вещества.</span>
       </div>
-      <div class="how-it-is-work__sub how-it-is-work__sub-powder">
+
+      <div class="how-it-is-work__sub how-it-is-work__sub-powder how-it-is-work__powder how-it-is-work__sub-second-child">
         <span class="how-it-is-work__green advantage-1">
           <img src="img/advantage-2.png" alt="advantage2" class="how-it-is-work__sub-img-advantage" width="29"
             height="31">
         </span>
-        <span class="how-it-is-work__sub-text how-it-is-work__sub-text-powder">Выпускается в виде порошка, который нужно
+        <span class="how-it-is-work__sub-text how-it-is-work__sub-text-powder how-it-is-work__sub-text-second-child">Выпускается в виде порошка, который нужно
           лишь залить кипятком и
           готово.</span>
       </div>
-      <div class="how-it-is-work__sub">
+      </div>
+      <div class="how-it-is-work__sub-two-items">
+      <div class="how-it-is-work__sub how-it-is-work__sub-third-child">
         <span class="how-it-is-work__green advantage-1">
           <img src="img/advantage-3.png" alt="advantage3" class="how-it-is-work__sub-img-advantage" width="23"
             height="30">
         </span>
-        <span class="how-it-is-work__sub-text">Замените один-два приема обычной еды на наше функциональное
+        <span class="how-it-is-work__sub-text how-it-is-work__sub-text-third-child">Замените один-два приема обычной еды на наше функциональное
           питание.</span>
       </div>
-      <div class="how-it-is-work__sub how-it-is-work__sub-clock">
+
+      <div class="how-it-is-work__sub how-it-is-work__sub-clock how-it-is-work__sub-fourth-child">
         <span class="how-it-is-work__green advantage-1">
           <img src="img/advantage-4.png" alt="advantage4" class="how-it-is-work__sub-img-advantage" width="26"
             height="31">
         </span>
-        <span class="how-it-is-work__sub-text how-it-is-work__sub-text-in-a-month">Уже через месяц наслаждайтесь
-          изменениями к лучшему вашего
-          питомца!</span>
+        <span class="how-it-is-work__sub-text how-it-is-work__sub-text-in-a-month how-it-is-work__sub-text-fourth-child">Уже через месяц наслаждайтесь
+          изменениями к лучшему вашего питомца!</span>
       </div>
+    </div>
+  </div>
     </section>
-    <div class="live-example">
-      <div class="live-example__content">
-        <span class="live-example__header">
-          Живой пример
-        </span>
-        <span class="live-example__sub">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-          Отличный результат без изнуряющих тренировок!
-          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </span>
-        <div class="live-example__numbers">
-          <div class="live-example__numbers-sub">
-            <span class="live-example__numbers-sub-header">5 кг</span>
-            <span class="live-example__numbers-sub-content">снижение веса</span>
-          </div>
-          <div class="live-example__numbers-sub">
-            <span class="live-example__numbers-sub-header">60 дней</span>
-            <span class="live-example__numbers-sub-content">затрачено времени</span>
-          </div>
-        </div>
-        <span class="live-example__price">Затраты на питание: 15 000 руб.</span>
-        <div class="live-example__slider">
-          <img src="img/cat1-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-1">
-          <img src="img/cat2-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-2">
-
-          <div class="live-example__slider-controls">
-            <span class="live-example__slider-button">Было</span>
-            <div class="live-example__slider-on-off">
-              <div class="live-example__slider-on-off-content">
-                <img src="img/in-slider-green.png" alt="in slider green"
-                  class="live-example__slider-on-off-content-image">
-              </div>
-            </div>
-            <span class="live-example__slider-button">Стало</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="communicating">
-      <div class="communicating__main-text">
-        <span class="communicating__offer-communicating">приглашаем к сотрудничеству дилеров!</span>
-        <span class="communicating__address communicating__address-index">ул. Большая Конюшенная, д. 19/8
-          Санкт-Петербург</span>
-      </div>
-    </div>
-    <div class="map">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20307.5497561974!2d30.498387490673824!3d50.48869895940726!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1586080633832!5m2!1sru!2sua"
-        height="362" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
-        class="map__iframe"></iframe>
-    </div>
   </main>
-  <footer class="footer">
+  <div class="live-example">
+    <div class="live-example__content">
+      <span class="live-example__header">
+        Живой пример
+      </span>
+      <span class="live-example__sub">
+        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+        Отличный результат без изнуряющих тренировок!
+        При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+      </span>
+
+      <div class="live-example__numbers-plus-price">
+      <div class="live-example__numbers">
+        <div class="live-example__numbers-sub live-example__numbers-sub-first-child">
+          <span class="live-example__numbers-sub-header live-example__numbers-sub-header-five-kg">5 кг</span>
+          <span class="live-example__numbers-sub-content live-example__numbers-sub-content-low-weight">снижение веса</span>
+        </div>
+        <div class="live-example__numbers-sub live-example__numbers-sub-last-child">
+          <span class="live-example__numbers-sub-header live-example__numbers-sub-header-sixty-days">60 дней</span>
+          <span class="live-example__numbers-sub-content live-example__numbers-sub-content-total-time">затрачено времени</span>
+        </div>
+      </div>
+
+      <span class="live-example__price">Затраты на питание: <span class="live-example__price-fifteen-thousand"> 15 000 руб.</span></span>
+    </div>
+
+
+      <div class="live-example__slider">
+        <img src="img/cat1-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-1">
+        <img src="img/cat2-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-2">
+<img src="img/big-index-slider-cat.png" alt="big-index-slider-cat" class="live-example__slider-slide-show-tablet">
+        <div class="live-example__slider-controls">
+          <span class="live-example__slider-button">Было</span>
+          <div class="live-example__slider-on-off">
+            <div class="live-example__slider-on-off-content">
+              <img src="img/slider-control.png" alt="slider control" class="live-example__slider-glide-button">
+              <img src="img/in-slider-green.png" alt="in slider green"
+                class="live-example__slider-on-off-content-image">
+            </div>
+          </div>
+          <span class="live-example__slider-button live-example__slider-button-became">Стало</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="communicating communicating__index">
+    <div class="communicating__main-text">
+      <span class="communicating__offer-communicating">приглашаем к сотрудничеству дилеров!</span>
+      <span class="communicating__address communicating__address-index">ул. Большая Конюшенная, д. 19/8
+        <span
+          class="communicating__address-city">Санкт-Петербург</span></span>
+    </div>
+  </div>
+  <div class="map">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20307.5497561974!2d30.498387490673824!3d50.48869895940726!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1586080633832!5m2!1sru!2sua"
+      height="362" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+      class="map__iframe map__iframe-index"></iframe>
+  </div>
+  <footer class="footer footer-index">
     <div class="footer__footer-content">
       <div class="footer__logo">
         <img src="img/footer-logo.png" alt="footer_logo" class="footer__footer-logo footer__footer-logo-index"
