--- a/source/index.html
+++ b/source/index.html
@@ -51,7 +51,7 @@
     <img src="img/index-can-desktop.png" alt="index-can-desktop" class="header-background__desktop-img" >
     <a href="" class="check-your-program"> Подобрать программу</a>
   </div>
-  </header>
+
   <main class="main">
 
     <section class="programs">
@@ -134,9 +134,14 @@
   </main>
   <div class="live-example">
     <div class="live-example__content">
+
+		<div class="live-example__header-plus-how-many-spent">
       <span class="live-example__header">
         Живой пример
       </span>
+			<div class="live-example__content-slider">
+		<div class="live-example__main-content">
+      <div class="live-example__main-content-left-column">
       <span class="live-example__sub">
         Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
         Отличный результат без изнуряющих тренировок!
@@ -155,10 +160,11 @@
         </div>
       </div>
 
-      <span class="live-example__price">Затраты на питание: <span class="live-example__price-fifteen-thousand"> 15 000 руб.</span></span>
+      <span class="live-example__price"><span class="live-example__how-many-u-spent">Затраты на питание: </span><span class="live-example__price-fifteen-thousand"> 15 000 руб.</span></span>
     </div>
-
-
+  </div>
+ </div>
+			
       <div class="live-example__slider">
         <img src="img/cat1-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-1">
         <img src="img/cat2-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-2">
@@ -175,6 +181,8 @@
           <span class="live-example__slider-button live-example__slider-button-became">Стало</span>
         </div>
       </div>
+				</div>
+		</div>
     </div>
   </div>
   <div class="communicating communicating__index">
@@ -220,7 +228,6 @@
         </a>
         <img src="img/htmlaademy-footer-logo.png" alt="" class="right-logo__logo-organization" width="27" height="34">
       </div>
-    </div>
     </div>
   </footer>
 </body>
