посмотрите сетку индекс десктоп

--- a/source/index.html
+++ b/source/index.html
@@ -258,7 +258,7 @@
   </div>
   <footer class="footer footer-index">
     <div class="footer__footer-content">
-      <div class="footer__logo">
+      <div class="footer__logo footer__logo-index">
         <img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image">
       </div>
       <ul class="footer__social-links">
