--- a/source/catalog.html
+++ b/source/catalog.html
@@ -247,7 +247,7 @@
       <div class="additional-goods__content">
         <div class="additional-goods__content-desktop-articles">
           <article class="additional-goods__article">
-
+           <div class="additional-goods__article-main-div">
             <div class="additional-goods__article-main-text">
 
               <span class="additional-goods__article-header">
@@ -266,9 +266,10 @@
             <button class="additional-goods__article-order">
               Заказать
             </button>
+            </div>
           </article>
           <article class="additional-goods__article">
-
+            <div class="additional-goods__article-main-div">
             <div class="additional-goods__article-main-text">
 
               <span class="additional-goods__article-header">
@@ -287,10 +288,11 @@
             <button class="additional-goods__article-order">
               Заказать
             </button>
+          </div>
           </article>
           <article class="additional-goods__article">
 
-
+            <div class="additional-goods__article-main-div">
             <div class="additional-goods__article-main-text">
 
               <div class="additional-goods__article-header">
@@ -311,9 +313,10 @@
             <button class="additional-goods__article-order">
               Заказать
             </button>
+          </div>
           </article>
           <article class="additional-goods__article additional-goods__article-last-child">
-
+            <div class="additional-goods__article-main-div">
             <div class="additional-goods__article-main-text">
 
               <span class="additional-goods__article-header">
@@ -330,6 +333,7 @@
 
             </div>
             <button class="additional-goods__article-order">Заказать</button>
+          </div>
           </article>
         </div>
         <div class="additional-goods__green-background">
