Помогите с каталог десктоп

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -354,10 +354,10 @@
   </main>
 
   <div class="map">
-    <div class="communicating communicating-form">
+    <div class="communicating communicating-form communicating-catalog-block">
       <div class="communicating__main-text">
         <span class="communicating__offer-communicating">приглашаем к сотрудничеству дилеров!</span>
-        <span class="communicating__address">ул. Большая Конюшенная, д. 19/8 <span
+        <span class="communicating__address communicating__address-catalog">ул. Большая Конюшенная, д. 19/8 <span
             class="communicating__address-city">Санкт-Петербург</span></span>
       </div>
     </div>
