--- a/source/form.html
+++ b/source/form.html
@@ -177,12 +177,12 @@
     </div>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20307.5497561974!2d30.498387490673824!3d50.48869895940726!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1586080633832!5m2!1sru!2sua"
-      width="600" height="363" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+      frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
       class="map__iframe map__iframe-form"></iframe>
   </div>
-  <footer class="footer footer-index">
+  <footer class="footer footer-index ">
     <div class="footer__footer-content">
-      <div class="footer__logo footer__logo-index">
+      <div class="footer__logo footer__logo-index footer-logo-form">
         <img src="img/logo-footer.svg" alt="logo-footer" class="footer__logo-image">
       </div>
       <ul class="footer__social-links">
