вроде что то сделал

--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
   <title>Функциональное питание для котов</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
+	<script src="js/picturefill.js"></script>
 </head>
 
 <body class="body">
