--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,7 @@
   <title>Подбор программы занятий</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
+	<script src="js/picturefill.js"></script>
 </head>
 
 <body class="body">
